fix draggables on mobile

--- a/src/app/components/draggable-space-object/draggable-space-object.component.scss
+++ b/src/app/components/draggable-space-object/draggable-space-object.component.scss
@@ -38,6 +38,7 @@
   width: max-content;
   min-width: unset !important;
   height: auto !important;
+  max-height: 34px !important; // Mobile buttons stretch vertically
   padding: 6px;
 
   color: var(--color-text-map-green) !important;
